--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ add_executable(dice-reader dice-reader.c)
 pico_enable_stdio_usb(dice-reader 1)
 pico_enable_stdio_uart(dice-reader 0)
 
-target_link_libraries(dice-reader pico_stdlib pico_cyw43_arch_none hardware_i2c)
+add_subdirectory(qmc5883l)
+
+target_link_libraries(dice-reader qmc5883l pico_stdlib pico_cyw43_arch_none
+                      hardware_i2c)
 
 pico_add_extra_outputs(dice-reader)
-
